test/errors/type/collections/set/copy.yasl
echo mt.lookup(collections.set(), .copy)(1)
